App UI now receives all it needs to operate properlly